2001-12-26  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/*: Added opcodes 4C and 4D. Also added option to load
	a specific usecode file to ucxt.

2001-12-26  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* tools/uctools.h, usecode/ucinternal.cc: added opcodes 4C and 4D,
	spanish SI works now

2001-12-26  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/data/opcodes.txt: Cleaned up callis and calli output
	under -fz. Fixed a 'bug' with the output of the binary math/comparison
	output functions' parameters' being around the wrong way. 

2001-12-25  Patrick Burke  <takhisisi@yahoo.com.au>
	* usecode/ucxt/*: Added 'return' flag to opcodes.txt, better error
	messages to handle badly edited opcodes.txt files, and correct RTS
	handling for the CALL opcode.
	* usecode/ucxt/opcodes.txt: Fixed output of cmps and arrc opcodes under
	-fz
	* usecode/ucxt/*: Added a 'full text' output string in addition to the
	original short/comment text output. Added escaping for characters
	('\\' and '\"') in the 'full text' output strings.

2001-12-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* usecode/ucxt/src/ucfunc.cc: fixed intrinsic bug, re-used opcode bug 

2001-12-24  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/*: Removed bugs from debugging statements.

2001-12-24  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Implemented apply_damage() intrinsic.

2001-12-23  Jeff Freedman  <jeff@amy.nerble.net>

	* paths.cc (Offscreen_pathfinder_client), actions.cc: Added 'best'
	location to aim for when finding a path off the screen.
	* actors.cc (approach_another):  Fiddled with speed/delay.
	* schedule.cc (Hound_schedule):  Speed it up a bit.

2001-12-23  Ryan Nunn  <triforce@merlin.net.au>
	* gumps/AudioOptions_gump.cc, gumps/GameplayOptions_gump.cc,
	  gumps/VideoOptions_gump.cc : Errors, Errors, Errors
	* msvcstuff/Exult.dsp : Adding Enabled_button.*
	* msvcstuff/Exult_flx.dsp : Removing shapes.
